src/objects/SPE_KPIValue__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Condition__c</fullName>
        <label>Actual Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Formula__c</fullName>
        <label>Actual Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>BL1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NETWORK IMPLEMENTATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYSTEMS INTEGRATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSINESS SUPPORT SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND ENTERTAINMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3G CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCHITECTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEM AND OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUID CORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERFECT VOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECURITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGLE RAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMALL CELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGGREGATION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>BU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MATURE SOFTWARE PRODUCTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTICAL NETWORKS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Category Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYANMAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THAILAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIETNAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDONESIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH KOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MALAYSIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SINGAPORE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHILIPPINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW ZEALAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BULGARIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERMANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GREECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CROATIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUSSIAN FEDERATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKRAINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLOVENIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnterpriseIDEncrypted__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up(with Supplier) Enterprise Id field to replace the Enterprise Id text field in all codes. Enterprise Id Text field will be as it is in all layouts.</description>
        <label>EnterpriseID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KPI Values</relationshipLabel>
        <relationshipName>KPI_Values_EnterpriseLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionPeriod__c</fullName>
        <label>Execution Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierParam__c</fullName>
        <label>IdentifierParam</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI Values</relationshipLabel>
        <relationshipName>KPI_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPIValue__c</fullName>
        <label>KPI Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Text_Value__c</fullName>
        <label>KPI Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO DEACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO OTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCHN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ ANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ IDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ SEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ SPANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEACT REG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTH NONCMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCHN CMCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCHN CTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCHN CUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCHN THM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA BHARTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA GEPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA IDEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA MUV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA RELIANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA TATA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyComments__c</fullName>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>KPI Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>KVI-{00000}</displayFormat>
        <label>KPI Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>